k8s/old/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graduados-ingress
  namespace: web-internacionales-appgraduados
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true" 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: 16224m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRequestBodyAccess On
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - internacionalesgraduados.unicen.edu.ar
    secretName: graduados-tls
  rules:
  - host: internacionalesgraduados.unicen.edu.ar
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: graduados-backend
            port:
              number: 3000
      - path: /socket.io(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: graduados-backend
            port:
              number: 3000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: graduados-frontend
            port:
              number: 80
